Fixing overflowing forging navigation
Reducing right and left padding of .nav-underline.

--- a/css/nav.less
+++ b/css/nav.less
@@ -135,7 +135,7 @@
 }
 
 .nav-underline {
-  padding: 0 60px;
+  padding: 0 40px;
 
   &.categories {
     padding-right: 15px;
